--- a/One/appsettings.json
+++ b/One/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DbCon": "Server=DESKTOP-9VSTEED; Trusted_connection= true; Database = One"
+  },
   "AllowedHosts": "*"
 }
